# rust-py-sample

./: Cargo.toml  README.md  run_me.sh
data/: sample_script.py
src/: main.rs  sample.rs
