[package]
name = "rust-py-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.19.0", features = [ "abi3-py311" ] }
image = { version = "0.23.14", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"]  }
wasi-nn = { version = "0.2.1" }

[build-dependencies]
flate2 = "1.0.26"
reqwest = { version = "0.11.18", features = ["blocking"] }
tar = "0.4.38"
bytes = "1.4.0"
